--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -66,7 +66,7 @@
                                     <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="1D8-Gt-16Y" kind="push" identifier="registrationView" id="6bg-ML-VRK"/>
+                                    <segue destination="1D8-Gt-16Y" kind="push" id="y6k-3i-JjZ"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1177,14 +1177,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="oUI-Jh-sIv">
-                            <rect key="frame" x="0.0" y="110" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Login"/>
-                            <connections>
-                                <segue destination="ofP-CN-yoG" kind="push" id="PJu-jk-a6g"/>
-                            </connections>
-                        </button>
                         <prototypes>
                             <tableViewCell tag="100" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MoreCell" id="rfb-6m-XYc" customClass="MoreCustomCell">
                                 <rect key="frame" x="0.0" y="56" width="375" height="44"/>
@@ -1241,10 +1233,6 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="lvx-K7-pRx">
-                                                    <rect key="frame" x="253" y="6" width="51" height="31"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </switch>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1544,6 +1532,5 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="G5x-3c-mw0"/>
-        <segue reference="ymL-KN-Yv3"/>
     </inferredMetricsTieBreakers>
 </document>
